# dory

./: .gitignore  CMakeLists.txt  README.md  build-win.bat  mac-build.sh  mac-setup.sh  mac-xcode-build.sh  setup-mac.sh  setup-win.bat  win-build.bat  win-setup.bat
assets/shaders/: point_light.frag  point_light.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
dory/: CMakeLists.txt  dory.h
dory/include/: dory.h
dory/src/: CMakeLists.txt  defines.h
dory/src/core/: CMakeLists.txt  application.cpp  application.h  asserts.cpp  asserts.h  core.h  entry.h  input.cpp  input.h  key_codes.h  logger.cpp  logger.h  mouse_codes.h  timer.h
dory/src/events/: CMakeLists.txt  event.h  event_handler.h  keyboard_event.h  mouse_event.h  window_event.h
dory/src/loaders/: CMakeLists.txt  object_loader.cpp  object_loader.h
dory/src/math/: CMakeLists.txt  hash.h  push.h  transforms.cpp  transforms.h
dory/src/platform/: CMakeLists.txt  window.cpp  window.h
dory/src/renderer/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  data.h  descriptor.cpp  descriptor.h  device.cpp  device.h  frame_info.h  model.cpp  model.h  object.cpp  object.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
dory/src/systems/: CMakeLists.txt  point_light_system.cpp  point_light_system.h  renderer_system.cpp  renderer_system.h
dory/src/utils/: CMakeLists.txt  nocopy.h  utils.cpp  utils.h
sandbox/: CMakeLists.txt
scripts/: build-mac.sh  compile-shaders-mac.sh  compile-shaders-win.bat
tests/: CMakeLists.Txt  CMakeLists.txt
tests/logger/: CMakeLists.txt  tlog  tlog.cpp
tests/test_application/: CMakeLists.txt  test_application.cpp
tests/test_logger/: CMakeLists.txt  test_logger.cpp
tests/test_window/: CMakeLists.txt  test_window.cpp
tests/window/: CMakeLists.txt
